Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -439,37 +439,37 @@ Before explaining the details of how each of these operations would be implement
 For space, I propose to compare with our previous structures and with a plain representation using bits per symbol (bps). Otherwise, the baseline we select for our $\%$ can be misleading.
 
 \begin{figure}[hbt!]
-\includegraphics[width=\textwidth]{experiments/board.eps}
+\includegraphics[width=0.7\textwidth]{experiments/board.eps}
 \caption{Comparison of \texttt{board\_X$_{LT}$} queries, with all variants}
 \end{figure}
 
 \begin{figure}[hbt!]
-\includegraphics[width=\textwidth]{experiments/start.eps}
+\includegraphics[width=0.7\textwidth]{experiments/start.eps}
 \caption{Comparison of \texttt{start\_X$_{LT}$} queries, with all variants}
 \end{figure}
 
 \begin{figure}[hbt!]
-\includegraphics[width=\textwidth]{experiments/end.eps}
+\includegraphics[width=0.7\textwidth]{experiments/end.eps}
 \caption{Comparison of \texttt{end\_X$_{LT}$} queries, with all variants}
 \end{figure}
 
 \begin{figure}[hbt!]
-\includegraphics[width=\textwidth]{experiments/xy0.eps}
+\includegraphics[width=0.7\textwidth]{experiments/xy0.eps}
 \caption{Comparison of \texttt{from\_X$_{LT}$\_to\_Y$_{LT}$} queries, variating line restrictions}
 \end{figure}
 
 \begin{figure}[hbt!]
-\includegraphics[width=\textwidth]{experiments/xy1.eps}
+\includegraphics[width=0.7\textwidth]{experiments/xy1.eps}
 \caption{Comparison of \texttt{from\_X$_{LT}$\_to\_Y$_{LT}$} queries, variating line restrictions with a fixed starting time restriction}
 \end{figure}
 
 \begin{figure}[hbt!]
-\includegraphics[width=\textwidth]{experiments/xy2.eps}
+\includegraphics[width=0.7\textwidth]{experiments/xy2.eps}
 \caption{Comparison of \texttt{from\_X$_{LT}$\_to\_Y$_{LT}$} queries, variating line restrictions with a fixed ending time restriction}
 \end{figure}
 
 \begin{figure}[hbt!]
-\includegraphics[width=\textwidth]{experiments/xy3.eps}
+\includegraphics[width=0.7\textwidth]{experiments/xy3.eps}
 \caption{Comparison of \texttt{from\_X$_{LT}$\_to\_Y$_{LT}$} queries, variating line restrictions with fixed starting and ending time restriction}
 \end{figure}
 
