--- a/paper.tex
+++ b/paper.tex
@@ -554,21 +554,51 @@ Missing a comparison of \acumm~vs \ttctr!
 \end{figure}
 
 \begin{figure}[hbt!]
-\includegraphics[width=0.495\textwidth]{experiments/start.eps}
-\includegraphics[width=0.495\textwidth]{experiments/end.eps}
-\caption{Comparison of \texttt{start\_X$_{LT}$} (left) and \texttt{end\_X$_{LT}$} (right) queries, with all variants}
+\begin{subfigure}{0.5\linewidth}
+\includegraphics[width=\linewidth]{experiments/start.eps}
+\vspace{-12pt}
+\caption{\footnotesize (a)}
+\vspace{-12pt}
+\end{subfigure}%
+\begin{subfigure}{0.5\linewidth}
+\includegraphics[width=\linewidth]{experiments/end.eps}
+\vspace{-12pt}
+\caption{\footnotesize (b)}
+\vspace{-12pt}
+\end{subfigure}
+\caption{Comparison of \texttt{start\_X$_{LT}$} (a) and \texttt{end\_X$_{LT}$} (b) queries, with all variants}
 \end{figure}
 
 \begin{figure}[hbt!]
-\includegraphics[width=0.495\textwidth]{experiments/xy0.eps}
-\includegraphics[width=0.495\textwidth]{experiments/xy1.eps}
-\caption{Comparison of \texttt{from\_X$_{LT}$\_to\_Y$_{LT}$} queries, variating line (left) and starting time (right) restrictions}
+\begin{subfigure}{0.5\linewidth}
+\includegraphics[width=\linewidth]{experiments/xy0.eps}
+\vspace{-12pt}
+\caption{\footnotesize (a)}
+\vspace{-12pt}
+\end{subfigure}%
+\begin{subfigure}{0.5\linewidth}
+\includegraphics[width=\linewidth]{experiments/xy1.eps}
+\vspace{-12pt}
+\caption{\footnotesize (b)}
+\vspace{-12pt}
+\end{subfigure}
+\caption{Comparison of \texttt{from\_X$_{LT}$\_to\_Y$_{LT}$} queries, variating line (a) and starting time (b) restrictions}
 \end{figure}
 
 \begin{figure}[hbt!]
-\includegraphics[width=0.495\textwidth]{experiments/xy2.eps}
-\includegraphics[width=0.495\textwidth]{experiments/xy3.eps}
-\caption{Comparison of \texttt{from\_X$_{LT}$\_to\_Y$_{LT}$} queries, variating line (left) and starting time (right) restrictions with a fixed ending time restriction}
+\begin{subfigure}{0.5\linewidth}
+\includegraphics[width=\linewidth]{experiments/xy2.eps}
+\vspace{-12pt}
+\caption{\footnotesize (a)}
+\vspace{-12pt}
+\end{subfigure}%
+\begin{subfigure}{0.5\linewidth}
+\includegraphics[width=\linewidth]{experiments/xy3.eps}
+\vspace{-12pt}
+\caption{\footnotesize (b)}
+\vspace{-12pt}
+\end{subfigure}
+\caption{Comparison of \texttt{from\_X$_{LT}$\_to\_Y$_{LT}$} queries, variating line (a) and starting time (b) restrictions with a fixed ending time restriction}
 \end{figure}
 
 \section{Conclusions}
